updated lobster data with new years

--- a/pivot_lobsters.Rmd
+++ b/pivot_lobsters.Rmd
@@ -16,7 +16,7 @@ library(skimr) # install.packages('skimr')
 library(kableExtra) # install.packages('kableExtra')
 
 ## read in data
-lobsters <- read_xlsx(here("data/lobsters.xlsx"), skip = 4)
+lobsters <- read_xlsx(here("data/lobsters2.xlsx"), skip = 4)
 
 # explore data
 skimr::skim(lobsters) 
@@ -29,13 +29,30 @@ siteyear_summary <- lobsters %>%
   summarize(count_by_siteyear = n(),
             mean_size_mm = mean(size_mm, na.rm = TRUE),
             sd_size_mm = sd(size_mm, na.rm = TRUE),
-            meadian_size_mm = median(size_mm, na.rm = TRUE))
+            median_size_mm = median(size_mm, na.rm = TRUE))
+## `summarise()` regrouping output by 'site' (override with `.groups` argument)
+
+siteyear_summary %>% 
+  kable()
 
 # lobsters %>% 
 #   group_by(year, site) %>% 
 #   summarize(count_by_siteyear = n())
+## `summarise()` regrouping output by 'site' (override with `.groups` argument)
 
-siteyear_summary %>% 
-  kable()
+## a ggplot option:
+ggplot(data = siteyear_summary, aes(x = year, y = median_size_mm, color = site)) +
+  geom_line() 
+ggsave(here("figures", "lobsters-line.png"))
+
+## Saving 7 x 5 in image
+## another option:
+ggplot(siteyear_summary, aes(x = year, y = median_size_mm)) +
+  geom_col() +
+  facet_wrap(~site)
+ggsave(here("figures", "lobsters-col.png"))
+## Saving 7 x 5 in image
+
+
 ```
 There are `r nrow(lobsters)` total lobsters included in this report.
